# log

./: CMakeLists.txt  README.md
include/log/: log.h
src/: log.c
test/: CMakeLists.txt  testdebug.c  testdebugcolor.c  testinfo.c
